# mashroom

./: Cargo.toml  get_version.bash  pak  release  release.toml
res/model/: cao.glb
src/: entity.rs  lib.rs  main.rs  object.rs  room.rs  ui_object.rs
src/editor/: editor.rs  editor_ui.rs
src/entity/: component.rs
