[package]
name = "mashroom"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/main.rs"
[[bin]]
name = "editor"
path = "src/editor/editor.rs"

[dependencies]
gl-tools = {path="../gl-tools"}
main_pak = {path="../main_pak"}
json = "*"
rfd = "*"


[profile.release]
strip=true
opt-level="z"
lto =true
codegen-units = 1
panic = "abort"


